Major refactoring: - Allow to specify where to find models and transformation - fixed log warning - Allow use of external extensions  within trafo (Thanks to Christian Soltenborn)

--- a/plugins/de.itemis.gmf.tools/build.properties
+++ b/plugins/de.itemis.gmf.tools/build.properties
@@ -6,4 +6,5 @@ bin.includes = icons/,\
                META-INF/,\
                .,\
                metamodels/,\
-               cheatsheet/
+               epl-v10.html
+
