--- a/trunk/plugins/de.itemis.gmf.tools/build.properties
+++ b/trunk/plugins/de.itemis.gmf.tools/build.properties
@@ -6,4 +6,5 @@ bin.includes = icons/,\
                META-INF/,\
                .,\
                metamodels/,\
-               cheatsheet/
+               epl-v10.html
+
