--- a/trunk/plugins/de.itemis.gmf.tools/plugin.xml
+++ b/trunk/plugins/de.itemis.gmf.tools/plugin.xml
@@ -10,6 +10,7 @@
 -->
 <?eclipse version="3.2"?>
 <plugin>
+   <extension-point id="transformer" name="GMF Gen Model Transformer" schema="schema/transformer.exsd"/>
    <extension
          point="org.eclipse.ui.commands">
       <category
