- Migrated templates to 3.5 RC3 - added gmfgen ecore models

--- a/plugins/de.itemis.gmf.runtime.extensions/build.properties
+++ b/plugins/de.itemis.gmf.runtime.extensions/build.properties
@@ -1,6 +1,7 @@
-source.. = src/
+source.. = src/, model/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               templates-HEAD/
+               templates-3.5RC3/,\
+               templates-3.4/
