--- a/trunk/plugins/de.itemis.gmf.tools/plugin.xml
+++ b/trunk/plugins/de.itemis.gmf.tools/plugin.xml
@@ -19,21 +19,33 @@
       </category>
       <command
             categoryId="de.itemis.gmf.tools.commands.category"
-            id="de.itemis.gmf.tools.commands.transformGMFGenModelCommand"
-            name="Transform GMF Generator Model">
+            id="de.itemis.gmf.tools.commands.generateLatest"
+            name="Generate from latest GMFTools config">
+      </command>
+      <command
+            id="de.itemis.gmf.tools.commands.generatePredefined"
+            categoryId="de.itemis.gmf.tools.commands.category"
+            defaultHandler="de.itemis.gmf.tools.contribution.GMFToolsHandler"
+            description="Runs GMFTools on the given config"
+            name="Generate from given GMFTools config">
+         <commandParameter
+               id="de.itemis.gmf.tools.commands.parameter.gmfConfig"
+               name="de.itemis.gmf.tools.commands.parameter.gmfConfig"
+               optional="true">
+         </commandParameter>
       </command>
    </extension>
    <extension
          point="org.eclipse.ui.handlers">
       <handler
             class="de.itemis.gmf.tools.contribution.GMFToolsHandler"
-            commandId="de.itemis.gmf.tools.commands.transformGMFGenModelCommand">
+            commandId="de.itemis.gmf.tools.commands.generateLatest">
       </handler>
    </extension>
    <extension
          point="org.eclipse.ui.bindings">
       <key
-            commandId="de.itemis.gmf.tools.commands.transformGMFGenModelCommand"
+            commandId="de.itemis.gmf.tools.commands.generateLatest"
             contextId="org.eclipse.ui.contexts.window"
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
             sequence="M1+6">
@@ -44,27 +56,29 @@
       <menuContribution
             locationURI="menu:org.eclipse.ui.main.menu?after=additions">
          <menu
-               id="de.itemis.gmf.tools.menus.gmfToolsMenu"
+               id="de.itemis.gmf.tools.menus.gmfTools"
                label="GMF Tools"
                mnemonic="M">
             <command
-                  commandId="de.itemis.gmf.tools.commands.transformGMFGenModelCommand"
-                  id="de.itemis.gmf.tools.menus.transformGMFGenModelCommand"
+                  commandId="de.itemis.gmf.tools.commands.generateLatest"
+                  id="de.itemis.gmf.tools.menus.generateLatest"
                   mnemonic="S"
-                  tooltip="Transforms GMF Generator Model">
+                  tooltip="Generates from latest GMFTools config">
             </command>
          </menu>
       </menuContribution>
       <menuContribution
             locationURI="toolbar:org.eclipse.ui.main.toolbar?after=additions">
          <toolbar
-               id="de.itemis.gmf.tools.toolbars.gmfToolsToolbar">
+               id="de.itemis.gmf.tools.toolbars.gmfTools">
             <command
-                  commandId="de.itemis.gmf.tools.commands.transformGMFGenModelCommand"
+                  commandId="de.itemis.gmf.tools.commands.generateLatest"
                   icon="icons/gmftools.png"
-                  id="de.itemis.gmf.tools.toolbars.transformGMFGenModelCommand"
-                  tooltip="Transforms GMF Generator Model">
+                  id="de.itemis.gmf.tools.toolbars.generateLatest"
+                  style="pulldown"
+                  tooltip="Generates from latest GMFTools config">
             </command>
+            <separator name = "additions" visible = "true" />
          </toolbar>
       </menuContribution>
    </extension>
@@ -148,6 +162,23 @@
             </groupMarker>
          </menu>
       </objectContribution>
+   </extension>
+   <extension
+         point="org.eclipse.ui.commandImages">
+      <image
+            commandId="de.itemis.gmf.tools.commands.generateLatest"
+            icon="icons/gmftools.png">
+      </image>
+      <image
+            commandId="de.itemis.gmf.tools.commands.generatePredefined"
+            icon="icons/gmftools.png">
+      </image>
+   </extension>
+   <extension
+         point="org.eclipse.ui.startup">
+      <startup
+            class="de.itemis.gmf.tools.Activator.Startup">
+      </startup>
    </extension>
 
 </plugin>
