--- a/plugins/de.itemis.gmf.runtime.extensions/build.properties
+++ b/plugins/de.itemis.gmf.runtime.extensions/build.properties
@@ -3,5 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               templates-3.5RC3/,\
+               templates-3.5/,\
                templates-3.4/
