--- a/trunk/plugins/de.itemis.gmf.runtime.extensions/plugin.xml
+++ b/trunk/plugins/de.itemis.gmf.runtime.extensions/plugin.xml
@@ -10,6 +10,8 @@
 -->
 <?eclipse version="3.2"?>
 <plugin>
+   <extension-point id="linkConstraintHook" name="Link Constraint Hook" schema="schema/linkConstraintHook.exsd"/>
+   <extension-point id="nodeConstraintHook" name="Node Constraint Hook" schema="schema/nodeConstraintHook.exsd"/>
    
       <extension
          point="org.eclipse.ui.popupMenus">
