RWL: First: I extended the GmfModelFilesDialog to additionally show a checkbox for RCP code generation; Second: GmfModelFilesDialog contains an additional checkbox to add specific GMF Models to an execution set. That execution set can be triggered with the first command in the GMF toolbar button. It allows you to regenerate a set of diagrams with just one mouse click.

--- a/plugins/de.itemis.gmf.tools/plugin.xml
+++ b/plugins/de.itemis.gmf.tools/plugin.xml
@@ -33,6 +33,11 @@
                name="de.itemis.gmf.tools.commands.parameter.gmfConfig"
                optional="true">
          </commandParameter>
+         <commandParameter
+               id="de.itemis.gmf.tools.commands.parameter.gmfConfigSet"
+               name="de.itemis.gmf.tools.commands.parameter.gmfConfigSet"
+               optional="true">
+         </commandParameter>
       </command>
    </extension>
    <extension
